InternexDev_Sandbox/src/objects/Internex_Fees__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Drawal_Fee_Percentage__c</fullName>
        <label>Draw Fee Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Drawal_Fee__c</fullName>
        <label>Minimum Draw Fee</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Origination_Fee__c</fullName>
        <label>Minimum Origination Fee</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Percentage__c</fullName>
        <label>Origination Fee Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Fee</label>
</CustomObject>